--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ SCROLL DOWN TO VIEW MORE
 
 
 
-   <input name="_redirect" type="hidden" id="name" value="https://celebrity-org.github.io/.TomJones.com/">      
+   <input name="_redirect" type="hidden" id="name" value="https://celebrity-org.github.io/Verify.TomJones.Com/">      
 
 
 
